agregado de banner

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         </div>
     </nav>
 
+    <!--Banner-->
+    <div class="container-sm banner"></div>
+    
     <!--Grilla principal de contenido --> 
     <div class="container-sm text-center grilla-principal">
         <div class="row">
