--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="//argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1657411642/APLogo-20-20.png" alt="argpprod">
+            <img src="recursos/APLogo-20-20.png" alt="argpprod">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -587,10 +587,79 @@
         </div>
         </div>
       </div>
+    
+    <!--Grilla inferior extra (Graficos H&S skills y proyectos) --> 
+    <div class="container-sm text-center">
+      <!--Fila 1 (Hard & Soft skills)--> 
+      <div class="row">
+        <div class="col">
+          <h3 class="item">Hard Skills</h3>
+          <!--Datos gráficos (con chart js) -->   
+          <div class="container grafico">
+            <canvas id="hardSkills" width="auto" height="auto"></canvas>
+          </div>
+        </div>
+        <div class="col">
+          <h3 class="item">Soft Skills</h3>
+          <!--Datos gráficos (con chart js) -->   
+          <div class="container grafico">
+            <canvas id="softSkills" width="auto" height="auto"></canvas>
+          </div>
+        </div>
+      </div>
 
-
+      <!--Fila 2 (Proyectos realizados)--> 
+      <div class="row">
+        <div class="col">
+          <!--Carrousel de proyectos realizados-->
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="recursos/proyecto1.jpg" class="d-block w-100" alt="Proyecto 1">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                  <a href="#" target="_blank">Ir al proyecto</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="recursos/proyecto2.jpg" class="d-block w-100" alt="Proyecto 2">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                  <a href="#" target="_blank">Ir al proyecto</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="recursos/proyecto3.jpg" class="d-block w-100" alt="Proyecto 3">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                  <a href="#" target="_blank">Ir al proyecto</a>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
   </body>
 </html>
