agregados todos los botones en cada sección

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <a class="navbar-brand" href="#">
             <img src="recursos/APLogo-20-20.png" alt="argpprod">
           </a>
+          <i class="fa-solid fa-pen-to-square fa-3x edit-redes"></i>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -494,7 +495,10 @@
         <div class="col-7 mi-col mi-col-derecha">
             <!--Sección 1-->
             <div class="container-sm fila-datos-basicos">
+              <section class="titulo">
                 <h1>ARMANDO PAREDES</h1>
+                <i class="fa-solid fa-pen-to-square fa-2x"></i>
+              </section>
                 <h3>Cargo ocupado</h3>
                 <p>
                     Descripción personal Lorem Ipsum is simply dummy text of the printing 
@@ -506,7 +510,10 @@
 
             <!--Sección 2-->
             <div class="container-sm">
-                <h4 class="encabezado">EXPERIENCIA PROFESIONAL</h4>
+                <h4 class="encabezado">
+                  EXPERIENCIA PROFESIONAL
+                  <i class="fa-solid fa-square-plus"></i>
+                </h4>
 
                 <div class="container text-start">
 
@@ -517,6 +524,8 @@
                         <p><i>(Ciudad, País)</i></p>
                       </div>
                       <div class="col-8">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <i class="fa-solid fa-trash-can"></i>
                         <h5>NOMBRE DE LA EMPRESA</h5>
                         <h6 class="cargo">Cargo ocupado</h6>
                         <p class="item">Descripción del trabajo desempeñado:</p>
@@ -536,6 +545,8 @@
                           <p><i>(Ciudad, País)</i></p>
                         </div>
                         <div class="col-8">
+                          <i class="fa-solid fa-pen-to-square"></i>
+                          <i class="fa-solid fa-trash-can"></i>
                           <h5>NOMBRE DE LA EMPRESA</h5>
                           <h6 class="cargo">Cargo ocupado</h6>
                           <p class="item">Descripción del trabajo desempeñado:</p>
@@ -555,6 +566,8 @@
                         <p><i>(Ciudad, País)</i></p>
                       </div>
                       <div class="col-8">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <i class="fa-solid fa-trash-can"></i>
                         <h5>NOMBRE DE LA EMPRESA</h5>
                         <h6 class="cargo">Cargo ocupado</h6>
                         <p class="item">Descripción del trabajo desempeñado:</p>
@@ -573,7 +586,10 @@
 
             <!--Sección 3-->
             <div class="container-sm">
-                <h4 class="encabezado">EDUCACIÓN</h4>
+                <h4 class="encabezado">
+                  EDUCACIÓN
+                  <i class="fa-solid fa-square-plus"></i>
+                </h4>
 
                 <div class="container text-start">
 
@@ -583,6 +599,8 @@
                         <p><i>(ciudad, País)</i></p>
                       </div>
                       <div class="col-8">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <i class="fa-solid fa-trash-can"></i>
                         <h5>TÍTULO CONSEGUIDO</h5>
                         <p class="cargo">Aquí va el nombre del establecimiento</p>
                       </div>
@@ -594,6 +612,8 @@
                           <p><i>(ciudad, País)</i></p>
                         </div>
                         <div class="col-8">
+                          <i class="fa-solid fa-pen-to-square"></i>
+                          <i class="fa-solid fa-trash-can"></i>
                           <h5>TÍTULO CONSEGUIDO</h5>
                           <p class="cargo">Aquí va el nombre del establecimiento</p>
                         </div>
@@ -605,6 +625,8 @@
                           <p><i>(ciudad, País)</i></p>
                         </div>
                         <div class="col-8">
+                          <i class="fa-solid fa-pen-to-square"></i>
+                          <i class="fa-solid fa-trash-can"></i>
                           <h5>TÍTULO CONSEGUIDO</h5>
                           <p class="cargo">Aquí va el nombre del establecimiento</p>
                         </div>
@@ -616,15 +638,22 @@
 
             <!--Sección 4-->
             <div class="container-sm">
-                <h4 class="encabezado">INTERESES</h4>
+                <h4 class="encabezado">
+                  INTERESES
+                  <i class="fa-solid fa-square-plus"></i>
+                </h4>
                 
                 <ul class="list-group text-start">
                     <li class="list-group-item list-group-item-primary">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <i class="fa-solid fa-trash-can"></i>
                         <p>
                             <b>Viajar:</b> Lorem Ipsum is simply dummy text of the printing
                         </p>
                     </li>
                     <li class="list-group-item list-group-item-primary">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <i class="fa-solid fa-trash-can"></i>
                         <p>
                             <b>Deportes:</b> Lorem Ipsum is simply dummy text of the  text of the printingtext of the printing 
                         </p>
@@ -642,14 +671,20 @@
       <!--Fila 1 (Hard & Soft skills)--> 
       <div class="row">
         <div class="col">
-          <h3 class="item">Hard Skills</h3>
+          <section class="titulo">
+            <h3 class="item">Hard Skills</h3>
+            <i class="fa-solid fa-pen-to-square"></i>
+          </section>
           <!--Datos gráficos (con chart js) -->   
           <div class="container grafico">
             <canvas id="hardSkills" width="auto" height="auto"></canvas>
           </div>
         </div>
         <div class="col">
-          <h3 class="item">Soft Skills</h3>
+          <section class="titulo">
+            <h3 class="item">Soft Skills</h3>
+            <i class="fa-solid fa-pen-to-square"></i>
+          </section>
           <!--Datos gráficos (con chart js) -->   
           <div class="container grafico">
             <canvas id="softSkills" width="auto" height="auto"></canvas>
@@ -660,6 +695,7 @@
       <!--Fila 2 (Proyectos realizados)--> 
       <div class="row">
         <div class="col">
+          <i class="fa-solid fa-pen-to-square fa-3x"></i>
           <!--Carrousel de proyectos realizados-->
           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
